2008-01-13  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Add -fno-stack-protector.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (CFLAGS): Make the default optimization level -O2.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't use AC_C_CONST or AC_C_VOLATILE.  The former
	doesn't work with -Werror and we assume gcc.
	
2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't overwrite the value of CFLAGS, add to it.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Update email address.

2007-11-23  Neal H. Walfield  <neal@gnu.org>

	* README: Add note that Pistachio must be compiled with the Pager
	ExchangeRegisters configure option enabled.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* README: Update building and booting instructions.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't include wortel/config.m4 or
	physmem/config.m4.  Include viengoos/config.m4.
 
	Don't include libhurd-cap/headers.m4,
	libhurd-cap-server/headers.m4, wortel/headers.m4 or
	physmem/headers.m4.  Include viengoos/headers.m4.

	Don't generate libhurd-cap/Makefile, libhurd-cap-server/Makefile,
	wortel/Makefile, physmem/Makefile, task/Makefile, or
	deva/Makefile.  Generate viengoos/Makefile.

	* Makefile.am (SUBDIRS): Remove libhurd-cap, libhurd-cap-server,
	wortel, physmem, task and deva.  Add viengoos.

2007-10-17  Neal H. Walfield  <neal@gnu.org>

	* libbitarray: New directory.
	* configure.ac: m4_include libbitarray/headers.m4.
	(AC_CONFIGU_FILES): Add libbitarray/Makefile.
	* Makefile.am (SUBDIRS): Add libbitarray.

2007-08-06  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Configure libl4/v2/Makefile,
	libl4/v2/ia32/Makefile and libl4/x2/Makefile.

2007-07-27  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (l4_abi_v2): New variable.
	(l4_abi_x2): Likewise.
	(l4-abi): New enable argument.
	(L4_ABI_V2): New automake conditional.
	(L4_ABI_X2): Likewise.
	* README: Document option.
