@@ -1,0 +1,3 @@
+*.tar.gz
+newlib
+newlib-*stamp
