@@ -1,3 +1,12 @@
+2008-01-17  Neal H. Walfield  <neal@gnu.org>
+
+	* configure.ac: Check for ln.
+	Add new option --with-newlib.
+	Generate newlib/Makefile.
+	* Makefile.am (NEWLIB_SUBDIRS): New variable.
+	(SUBDIRS): Add it.
+	* newlib: New directory.
+	
 2008-01-13  Neal H. Walfield  <neal@gnu.org>
 
 	* configure.ac: Add -fno-stack-protector.
